Added the exam grades for mditerm; and cleaned up code so it actually works.

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,16 @@
     "## Name     |  full name:  last, first\n",
     "## Marks    |  a namedtuple of type Marks\n",
     "## WebAssign|  WebAssign score (whole number, max 100)\n",
-    "## Raw Data |  full pandas Series whose index is the Name above"
+    "## Raw Data |  full pandas Series whose index is the Name above\n",
+    "\n",
+    "###########################################\n",
+    "\n",
+    "midtermOrFinal = \"Midterm\"\n",
+    "#extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
+    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 7<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
+    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "\n",
+    "course = \"math242\"  #math242 or math243 as a string"
    ]
   },
   {
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
     "               29, 50,  #D\n",
     "               29, 50) #F\n",
     "\n",
-    "midterm_242 = (\"(through section 3.5)\", \"Midterm\", # WebAssign sections\n",
+    "midterm_242 = (\"(through section 3.5)\", midtermOrFinal, # WebAssign sections\n",
     "               21, 80, 10, #A \n",
     "               19, 2, 70, 9, #B\n",
     "               16, 4, 60, 7, #C\n",
@@ -104,12 +113,7 @@
     "</tbody> </table>\"\"\"\n",
     "\n",
     "\n",
-    "midtermOrFinal = \"final\"\n",
-    "#extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
-    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 7<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
-    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
-    "course = \"math242\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
     "threshold_table = midterm_242 # final_242 if course==\"math242\" else final_243\n",
     "\n",
@@ -127,13 +131,13 @@
     "           # yes, I'm using 1000 as a threshold. I'm a teacher, not a programmer...\n",
     "          }\n",
     "    \n",
-    "    if individual.Marks.Score >= threshold['A'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"A\"][\"Below P\"] and individual.WebAssign >= threshold[\"A\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"A\"][\"Exam marks\"]:\n",
+    "    if individual.Marks.Score >= threshold['A'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"A\"][\"Below P\"] and individual.WebAssign >= threshold[\"A\"][\"WebAssign\"] and individual.Exam >= threshold[\"A\"][\"Exam marks\"]:\n",
     "        return \"A\"\n",
-    "    elif individual.Marks.Score >= threshold['B'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"B\"][\"Below P\"] and individual.WebAssign >= threshold[\"B\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"b\"][\"Exam marks\"]:\n",
+    "    elif individual.Marks.Score >= threshold['B'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"B\"][\"Below P\"] and individual.WebAssign >= threshold[\"B\"][\"WebAssign\"] and individual.Exam >= threshold[\"B\"][\"Exam marks\"]:\n",
     "        return \"B\"\n",
-    "    elif individual.Marks.Score >= threshold['C'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"C\"][\"Below P\"] and individual.WebAssign >= threshold[\"C\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"C\"][\"Exam marks\"]:\n",
+    "    elif individual.Marks.Score >= threshold['C'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"C\"][\"Below P\"] and individual.WebAssign >= threshold[\"C\"][\"WebAssign\"] and individual.Exam >= threshold[\"C\"][\"Exam marks\"]:\n",
     "        return \"C\"\n",
-    "    elif individual.Marks.Score >= threshold['D'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"D\"][\"Below P\"] and individual.WebAssign >= threshold[\"D\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"D\"][\"Exam marks\"]:\n",
+    "    elif individual.Marks.Score >= threshold['D'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"D\"][\"Below P\"] and individual.WebAssign >= threshold[\"D\"][\"WebAssign\"] and individual.Exam >= threshold[\"D\"][\"Exam marks\"]:\n",
     "        return \"D\"\n",
     "    elif individual.Marks.Score >= threshold['F'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"F\"][\"Below P\"] and individual.WebAssign >= threshold[\"F\"][\"WebAssign\"]:\n",
     "        return \"F\"\n",
@@ -151,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +176,7 @@
     "        \"letter_grade\": decide_letter_grade(individual),\n",
     "        \"date\": today,\n",
     "        \"midterm_or_final\": midtermOrFinal,\n",
+    "        \"exam_marks\": individual.Exam,\n",
     "        \"grade_threshold\": threshold_html_table,\n",
     "        \"extra_text\": extra_text if extra_text else \"\"\n",
     "    }\n",
@@ -196,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -266,12 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sgn_to_number(sgn):\n",
-    "#Note that S has the value 1, G has the value 0.5, and N has the value 0; else is 0; \n",
+    "def sgn_to_number(sgn):    \n",
     "    if (sgn == \"PM\"):\n",
     "        return 2\n",
     "    elif (sgn == \"P\"):\n",
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,83 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "8\n",
-      "5\n",
-      "10\n",
-      "6\n",
-      "8\n",
-      "9\n",
-      "4\n",
-      "0\n",
-      "9\n",
-      "6\n",
-      "7\n",
-      "9\n",
-      "10\n",
-      "6\n",
-      "9\n",
-      "8\n",
-      "9\n",
-      "1\n",
-      "7\n",
-      "10\n",
-      "10\n",
-      "8\n",
-      "10\n",
-      "10\n",
-      "10\n",
-      "0\n",
-      "10\n",
-      "7\n",
-      "9\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "10\n",
-      "10\n",
-      "10\n",
-      "10\n",
-      "10\n",
-      "8\n",
-      "0\n",
-      "8\n",
-      "0\n",
-      "10\n",
-      "9\n",
-      "8\n",
-      "10\n",
-      "9\n",
-      "10\n",
-      "10\n",
-      "6\n",
-      "8\n",
-      "7\n",
-      "5\n",
-      "8\n",
-      "9\n",
-      "0\n",
-      "7\n",
-      "10\n",
-      "8\n",
-      "4\n",
-      "9\n",
-      "10\n",
-      "7\n",
-      "6\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#for individual in class_scores:\n",
