Final exam update

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,12 @@
     "\n",
     "###########################################\n",
     "\n",
-    "midtermOrFinal = \"Midterm\"\n",
+    "midtermOrFinal = \"final\"\n",
     "#extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
-    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 7<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
-    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 8 this week and 9 during the finals week. You also can work on every WebAssign assignment until May 5<p>Have you taken the final and are happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade. (unless you don't take the final exam...)</p>\"\n",
+    "# extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "\n",
+    "    \n",
     "\n",
     "course = \"math242\"  #math242 or math243 as a string"
    ]
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +73,18 @@
     "               29, 50) #F\n",
     "\n",
     "midterm_242 = (\"(through section 3.5)\", midtermOrFinal, # WebAssign sections\n",
-    "               21, 80, 10, #A \n",
-    "               19, 2, 70, 9, #B\n",
-    "               16, 4, 60, 7, #C\n",
-    "               14, 50, 5, #D\n",
-    "               14, 50) #F\n",
+    "               21, 80, 9, #A    ## points; webassign; midterm marks\n",
+    "               19, 2, 70, 7, #B   ## points; below P; webassign; midterm marks\n",
+    "               16, 4, 60, 6, #C   ## points; below P; webassign; midterm marks\n",
+    "               14, 50, 5, #D   ## points;  below P;webassign; midterm marks\n",
+    "               14, 50) #F   ## points; webassign; midterm marks\n",
     "\n",
     "final_242 = (\"(all)\", \"Final\", # WebAssign sections\n",
-    "               43, 80, 10, #A \n",
-    "               36, 2, 70, 9, #B\n",
-    "               32, 6, 60, 7, #C\n",
-    "               28, 50, 5, #D\n",
-    "               28, 50) #F\n",
+    "               43, 80, 9, #A   ## points; webassign; midterm marks\n",
+    "               36, 2, 70, 7, #B  ## points; below P; webassign; midterm marks\n",
+    "               32, 6, 60, 6, #C  ## points; below P; webassign; midterm marks\n",
+    "               28, 50, 5, #D  ## points; below P; webassign; midterm marks\n",
+    "               28, 50) #F  ## points; webassign; \n",
     "\n",
     "midterm_123 = (\"(through section 2.5)\", # WebAssign sections\n",
     "               24, 80,  #A \n",
@@ -115,14 +117,18 @@
     "\n",
     "\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_242 # final_242 if course==\"math242\" else final_243\n",
+    "threshold_table = final_242 # final_242 if course==\"math242\" else final_243\n",
     "\n",
     "\n",
     "threshold_html_table = html_threshold_template % threshold_table\n",
     "\n",
     "\n",
     "def decide_letter_grade(individual):\n",
-    "#    print(threshold_table)\n",
+    "\n",
+    "    ## If they haven't taken the final, replace the letter grade information...\n",
+    "    if individual.Exam >= 1000:\n",
+    "        return \"Take the Final\"\n",
+    "\n",
     "    threshold = { \"A\": {\"Points\": threshold_table[2], \"Below P\": 0, \"WebAssign\": threshold_table[3], \"Exam marks\": threshold_table[4]},\n",
     "           \"B\": {\"Points\": threshold_table[5], \"Below P\": threshold_table[6], \"WebAssign\": threshold_table[7], \"Exam marks\": threshold_table[8]},\n",
     "           \"C\": {\"Points\": threshold_table[9], \"Below P\": threshold_table[10], \"WebAssign\": threshold_table[11], \"Exam marks\": threshold_table[12]},\n",
@@ -155,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +182,7 @@
     "        \"letter_grade\": decide_letter_grade(individual),\n",
     "        \"date\": today,\n",
     "        \"midterm_or_final\": midtermOrFinal,\n",
-    "        \"exam_marks\": individual.Exam,\n",
+    "        \"exam_marks\": individual.Exam if individual.Exam < 1000 else \"--\",\n",
     "        \"grade_threshold\": threshold_html_table,\n",
     "        \"extra_text\": extra_text if extra_text else \"\"\n",
     "    }\n",
@@ -201,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -209,7 +215,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"242-midterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"242-lastweek.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -271,17 +277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sgn_to_number(sgn):    \n",
-    "    if (sgn == \"PM\"):\n",
-    "        return 2\n",
-    "    elif (sgn == \"P\"):\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0\n",
+    "    ## remove any emojis and space:\n",
+    "    try:\n",
+    "        sgn = sgn.replace(\"🎉\",\"\").strip()\n",
+    "        if (sgn == \"PM\"):\n",
+    "            return 2\n",
+    "        elif (sgn == \"P\"):\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "    except AttributeError:\n",
+    "        return 0;  ## it was 'nan' data type.\n",
     "    \n",
     "def marks_to_score(marks):\n",
     "    \n",
@@ -312,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,13 +334,13 @@
     "    class_scores.append( Individual(Name=index, \n",
     "                                    Marks=summative(row.apply(marks_to_score)), \n",
     "                                    WebAssign=row.loc['WebAssign'], \n",
-    "                                    Exam=row.loc['Exam marks'],\n",
+    "                                    Exam=int(float(row.loc['Exam marks'].replace(\",\",\"\"))),\n",
     "                                    RawData=raw) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
