Changes to the graders for 2024.

--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"321-final-final.csv\"\n",
+    "filename_change_if_youre_testing = \"321-lastweek.csv\"\n",
     "midtermOrFinal = \"final\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
@@ -51,6 +51,7 @@
     "df.drop(['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability'], axis=1, inplace=True)\n",
     "df.set_index(\"Name\", inplace=True)\n",
     "\n",
+    "df.replace(r'\\s*🎉\\s*', '', regex=True, inplace=True)\n",
     "\n",
     "# Playing with this - it selects only the Core learning targets\n",
     "core_cols = df.filter(like=\"Core\", axis=1).columns\n",
@@ -58,13 +59,12 @@
     "# this extracts the difference in a roundabout way\n",
     "# {all columns} \\ {regex(core)} = {columns we want}\n",
     "\n",
-    "supplemental_cols = df.filter(set(better_cols).difference(core_cols)).columns\n",
-    "\n"
+    "supplemental_cols = df.filter(set(better_cols).difference(core_cols)).columns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     "coredf.fillna(0, inplace=True)\n",
     "supplementaldf.fillna(0, inplace=True)\n",
     "\n",
-    "# coredf.drop(\"N\", axis=1, inplace=True)\n",
+    "coredf.drop(\"N\", axis=1, inplace=True)\n",
     "supplementaldf.drop(\"N\", axis=1, inplace=True)\n",
     "\n",
     "\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,30 +238,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Standard Marks\n",
+      "0        O1    PM\n",
+      "1   O2 Core    PM\n",
+      "2        O3    PM\n",
+      "3   O4 Core    PM\n",
+      "4        O5    PM\n",
+      "5   L1 Core    PM\n",
+      "6        L2    PM\n",
+      "7        L3    PM\n",
+      "8        L4    PM\n",
+      "9   L5 Core    PM\n",
+      "10  N1 Core    PM\n",
+      "11  N2 Core    PM\n",
+      "12       N3    PM\n",
+      "13       N4    PM\n",
+      "14       N5    PM\n",
+      "15       N6    PM\n",
+      "16  R1 Core    PM\n",
+      "17       R2    PM\n",
+      "18       R3    PM\n",
+      "19  R4 Core    PM\n",
+      "20  C1 Core    PM\n",
+      "21  C2 Core     P\n",
+      "22       C3    PM\n",
+      "23       C4     P\n"
+     ]
+    }
+   ],
    "source": [
     "threshold_html_table = discrete_threshold_table % threshold_table\n",
     "#for individual in class_scores:\n",
     "\n",
     "# extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.<br/><br/> Remember that you need to get at all core learning targets (such as L5) correct at least once in order to get a C or better.\"\n",
-    "# extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. </p> <p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
+    "extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. </p> <p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
     "#extra_text = \"After checkpoint 15\"\n",
-    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "# extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
-    "for student in class_scores:\n",
-    "    print_the_report_for(student)\n",
+    "#for student in class_scores:\n",
+    "#    print_the_report_for(student)\n",
     "\n",
-    "#print(threshold_html_table)\n",
+    "print(class_scores[5].RawData)\n",
     "\n",
-    "#print_the_report_for(class_scores[5])"
+    "print_the_report_for(class_scores[5])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pysquirrel",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
