Added a note about blackboard's new output

--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 📝 Future me:\n",
+    "\n",
+    "The CSV I downloaded from Blackboard had an extra unnamed column after C4; I deleted the empty column and it worked."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Mastery grading with core vs. supplemental learning targets\n",
     "\n",
     "I need this distinction for its own grader since the core vs. supplemental is quite different for its data structure that I don't want to cram it on the calculus grader (which itself depends on 'webassign grade' which is a whole other thing)"
@@ -23,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"321-lastweek.csv\"\n",
-    "midtermOrFinal = \"final\"\n",
+    "filename_change_if_youre_testing = \"321-midterm.csv\"\n",
+    "midtermOrFinal = \"midterm\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -41,9 +50,7 @@
     "                       'R1 Core', 'R2', 'R3', 'R4 Core',\n",
     "                       'C1 Core', 'C2 Core', 'C3', 'C4']\n",
     "\n",
-    "\n",
     "better_cols = math321_better_cols\n",
-    "\n",
     "df.columns = better_cols\n",
     "\n",
     "## Make a better index column and dump everything not grade-related\n",
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,56 +245,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Standard Marks\n",
-      "0        O1    PM\n",
-      "1   O2 Core    PM\n",
-      "2        O3    PM\n",
-      "3   O4 Core    PM\n",
-      "4        O5    PM\n",
-      "5   L1 Core    PM\n",
-      "6        L2    PM\n",
-      "7        L3    PM\n",
-      "8        L4    PM\n",
-      "9   L5 Core    PM\n",
-      "10  N1 Core    PM\n",
-      "11  N2 Core    PM\n",
-      "12       N3    PM\n",
-      "13       N4    PM\n",
-      "14       N5    PM\n",
-      "15       N6    PM\n",
-      "16  R1 Core    PM\n",
-      "17       R2    PM\n",
-      "18       R3    PM\n",
-      "19  R4 Core    PM\n",
-      "20  C1 Core    PM\n",
-      "21  C2 Core     P\n",
-      "22       C3    PM\n",
-      "23       C4     P\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "threshold_html_table = discrete_threshold_table % threshold_table\n",
     "#for individual in class_scores:\n",
     "\n",
     "# extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.<br/><br/> Remember that you need to get at all core learning targets (such as L5) correct at least once in order to get a C or better.\"\n",
-    "extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. </p> <p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
-    "#extra_text = \"After checkpoint 15\"\n",
-    "# extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "# extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. </p> <p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
+    "# #extra_text = \"After checkpoint 15\"\n",
+    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
-    "#for student in class_scores:\n",
-    "#    print_the_report_for(student)\n",
+    "for student in class_scores:\n",
+    "   print_the_report_for(student)\n",
     "\n",
-    "print(class_scores[5].RawData)\n",
+    "# print(class_scores[5].RawData)\n",
     "\n",
-    "print_the_report_for(class_scores[5])"
+    "# print_the_report_for(class_scores[5])"
    ]
   }
  ],
